--- a/operaciones.html
+++ b/operaciones.html
@@ -8,6 +8,8 @@
 <body>
     <table>
         <h1>hola como estas</h1>
+        <h1>hola como estas</h1>
+        <h2>saludo inicial</h2>
     </table>
 </body>
 </html>
