--- a/operaciones.html
+++ b/operaciones.html
@@ -10,6 +10,8 @@
         <h1>hola como estas</h1>
         <h1>hola como estas</h1>
         <h2>saludo inicial</h2>
+        <h3>respuesta automatica</h3>
+        <h4>control manual</h4>
     </table>
 </body>
 </html>
